# openexam

./: .env.template  .env.terraform.template  .gitignore  README.md  deploy_lambdas.ps1  deploy_lambdas.sh  docker-compose.yml
.github/workflows/: build-cheatsheet.yaml  build-gateway.yaml  build-user.yaml
auth/: .env.template  Cargo.toml  README.md
auth/src/: main.rs
auth/src/db/: mod.rs
auth/src/handlers/: user.rs
auth/src/repositories/: user.rs
auth/src/routes/: user.rs
auth/src/services/: response.rs  user.rs
cheatsheet/: .air.toml  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum
cheatsheet-generator/: pyproject.toml  requirements.txt
cheatsheet-generator/src/: config.py
cheatsheet-generator/src/utils/: s3_helpers.py
cheatsheet/cmd/api/: main.go
cheatsheet/internal/app/: middleware.go  router.go
cheatsheet/internal/config/: config.go
cheatsheet/internal/domain/: cheatsheet_entity.go  errors.go  file_entity.go  ports.go  share_entity.go
cheatsheet/internal/handler/: file_handler.go  share_handler.go
cheatsheet/internal/mq/: connection.go  consumer.go  publisher.go  sqs_consumer.go  sqs_publisher.go
cheatsheet/internal/repository/: dynamodb_repository.go  s3_repository.go
cheatsheet/internal/service/: file_service.go  generation_tracker.go  share_service.go
frontend/: .prettierrc  README.md  package.json  pnpm-lock.yaml
gateway/: .env.template  Cargo.toml  Dockerfile  README.md  build.rs
gateway/src/: docs.rs  main.rs
gateway/src/config/: config.rs
gateway/src/dtos/: cheatsheet.rs  mod.rs  user.rs
gateway/src/extractors/: mod.rs  user_id.rs
gateway/src/handlers/: auth.rs  cheatsheet.rs  mod.rs  user.rs
gateway/src/middleware/: auth.rs
gateway/src/proto/: auth.rs  user.proto  user.rs
gateway/src/routes/: auth.rs  cheatsheet.rs  mod.rs
gateway/src/services/: auth.rs  cheatsheet.rs  mod.rs  oauth.rs  response.rs  types.rs  user.rs
generator/: .gitignore  DEPLOYMENT.md  DYNAMODB_INTEGRATION.md  README.md  build_lambda.ps1  build_lambda.sh  requirements-dev.txt  requirements.txt
generator/src/: config.py  generator.py  main.py  tracker.py
generator/tests/: __init__.py  test_extract_user_id.py  test_s3_helpers.py
loadtest/: generate.js  get_all_files.js  upload_presign.js
terraform/: .env.template  .gitignore  LAMBDA_README.md  README.md  load_env.sh  main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/dev/: terraform.tfvars
terraform/prod/: main.tf  terraform.tfvars  variables.tf
user/: .dockerignore  .env.template  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml
user/src/: grpc.rs  main.rs
user/src/config/: config.rs
user/src/db/: mod.rs
user/src/models/: user.rs
user/src/proto/: auth.proto  auth.rs  user.proto  user.rs
user/src/repositories/: user.rs
user/src/routes/: user.rs
user/src/services/: auth.rs  oauth.rs  response.rs  user.rs
(+62 files in other folders)
