[package]
name = "user"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
hyper = { version = "1.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
dotenvy = "0.15.7"
anyhow = "1.0.99"
tonic = "0.12"
prost = "0.13"
oauth2 = "5.0.0"
jsonwebtoken = "9.3.1"

[build-dependencies]
tonic-build = "0.12"
